# AltirraSDL

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEBUGGER_IMPLEMENTATION_ANALYSIS.md  DEBUGGER_IMPROVEMENTS.md  GAME_LIBRARY_DESIGN_PLAN.md  HOSTING.md  LIBRETRO_CORE_IMPLEMENTATION_PLAN.md  LIBRETRO_IMPROVEMENTS_PLAN.md  LOBBY_INTEGRATION_EN.txt  LOBBY_INTEGRATION_PL.txt  Makefile.libretro  NETPLAY.md  NETPLAY_DESIGN_PLAN.md  README.md  RETRO_ARCH_IMPROVEMENTS.md  altirrasdl_imgui.ini  build.sh
server/lobby/: .gitignore  CMakeLists.txt  Dockerfile  README.md  altirra-lobby.service  server.cpp  server.go  server_test.cpp  server_test.go  server_ws_test.cpp  ws_bridge.cpp  ws_bridge.h
src/: BUILD-HOWTO.html  CMakeLists.txt
src/ATAppBase/source/: crthooks.cpp  exceptionfilter.cpp  outputdebugstringfilter.cpp
src/ATAudio/: CMakeLists.txt
src/ATAudio/source/: audiofilters.cpp  audiooutput_sdl3.cpp  pokey.cpp  pokeyrenderer.cpp  pokeysavestate.cpp
src/ATCore/: CMakeLists.txt
src/ATCore/source/: checksum_arm64.cpp  fft_scalar.cpp  propertyset.cpp
src/ATDebugger/: ATDebugger.vcxproj
src/ATDebugger/source/: defsymbols.cpp  symbols.cpp
src/ATDevices/: CMakeLists.txt
src/ATDevices/source/: parfilewriter.cpp
src/ATEmulation/: CMakeLists.txt
src/ATIO/: CMakeLists.txt
src/ATIO/source/: audioreader.cpp  audioreaderflac.cpp  audioreaderflac_arm64.cpp  cassetteaudiofilters.cpp  cassettedecoder.cpp  vorbismisc.cpp
src/ATNativeUI/source/: canvas_win32.cpp  dialog.cpp  uiframe.cpp  uipane.cpp  uipanedialog.cpp
src/ATNetwork/: CMakeLists.txt
src/ATNetworkSockets/: CMakeLists.txt
src/ATNetworkSockets/h/: stdafx.h
src/ATNetworkSockets/source/: lookupworker_sdl3.cpp  nativesockets_sdl3.cpp  socketutils_posix.cpp  socketworker_sdl3.cpp  vxlantunnel_sdl3.cpp  worker_sdl3.cpp
src/ATTest/: ATTest.vcxproj  ATTest.vcxproj.filters
src/ATTest/source/: TestEmu_PokeyMaxSample.cpp  TestIO_Vorbis.cpp  TestSystem_Any.cpp
src/ATUI/source/: uicontainer.cpp  uimanager.cpp  uiwidget.cpp  uiwidgetanimator.cpp
src/ATUIControls/source/: uilistview.cpp
src/ATVM/: CMakeLists.txt
src/Altirra/: Altirra.vcxproj  Altirra.vcxproj.filters
src/Altirra/h/: antic_sse2.inl  audiomonitor.h  autosuggest.h  cpu.h  cpumachine.inl  cpustates.h  gtia.h  gtiarenderer_ssse3_intrin.inl  inputmanager.h  inputmap.h  mmu.h  pokeymaxsample.h  pokeymaxsid.h  printer.h  printer1020.h  printerexport.h  printeroutput.h  printerrasterizer.h  simulator.h  stdafx.h  uiaccessors.h  uicommandiconinfo.inl  uidbgprinteroutput.h  uifrontend.h  uiquickbar.h  uirender.h  videowriter.h  ympsg.h
src/Altirra/res/: Altirra.rc  changes.txt  dbghelp.txt  menu_default.txt  printer-1020-headmove.pcm  printer-1020-headreverse.pcm  printer-1020-paperfeed.pcm  printer-1020-pendown.pcm  printer-1020-penup.pcm  resource.h
src/Altirra/source/: artifacting_pal_sse2_intrin.cpp  audiomonitor.cpp  audiostocksamples.cpp  autosuggest.cpp  cartridge.cpp  cheatengine.cpp  cpu.cpp  cpu65c816.cpp  customdevicevmtypes.cpp  debugger.cpp  devices.cpp  gtia.cpp  hostdevice.cpp  inputmanager.cpp  inputmap.cpp  main.cpp  mmu.cpp  options.cpp  pclink_win32.cpp  pokeymax.cpp  pokeymaxsample.cpp  pokeymaxsid.cpp  printer.cpp  printer1020.cpp  printerbase.cpp  printerexport.cpp  printeroutput.cpp  printerrasterizer.cpp  settings.cpp  simulator.cpp  uiconfdev1020.cpp  uiconfdevprinter.cpp  uiconfregister.cpp  uidbgprinteroutput.cpp  uidevices.cpp  uidisplay.cpp  uifrontend.cpp  uimrulist.cpp  uiquickbar.cpp  uirender.cpp  (+2 more)
src/AltirraBridgeServer/: CMakeLists.txt  main_bridge.cpp  ui_stubs.cpp
src/AltirraBridgeServer/stubs/: imgui.h
src/AltirraLibretro/: CMakeLists.txt  README.md  altirra_libretro.info  altirra_libretro.map  install-retroarch.sh  libretro.cpp  libretro_audio.cpp  libretro_common.h  libretro_dirs.cpp  libretro_log.cpp  libretro_log.h  libretro_midimate.cpp  libretro_time.cpp  libretro_ui_stubs.cpp  libretro_video.cpp  libretro_video.h  libretro_vkbd.cpp  libretro_vkbd.h  version.h.in
src/AltirraLibretro/libretro/: libretro.h
src/AltirraLibretro/tests/: libretro_smoke.cpp
src/AltirraSDL/: CMakeLists.txt
src/AltirraSDL/AltirraBridge/: BUILD-INFO.txt  CLAUDE.md  README.md
src/AltirraSDL/cmake/: altirra_core_sources.cmake  wasm_config.json  wasm_index.html.in  wasm_lib_deeplink.js
src/AltirraSDL/macos/: Info.plist.in
src/AltirraSDL/romdata/: atbasic_rom.h  audio_samples.h  dbghelp.h  generate_audio_samples.py  romset_readme.h
src/AltirraSDL/source/: commandline_sdl3.cpp  commands_sdl3.cpp  display_backend.h  display_backend_gl33.cpp  display_backend_gl33.h  display_backend_sdl.cpp  display_backend_sdl.h  display_librashader.cpp  display_librashader.h  display_sdl3.cpp  display_sdl3_impl.h  gl_funcs.cpp  gl_funcs.h  gl_helpers.cpp  gl_helpers.h  input_sdl3.cpp  logging.h  main_sdl3.cpp  shaders_bicubic.inl  shaders_bloom.inl  shaders_common.inl  shaders_screenfx.inl  touch_controls.cpp  touch_controls.h  touch_layout.h  touch_widgets.cpp  ui_cheater.cpp  ui_dbg_breakpoints.cpp  ui_dbg_callstack.cpp  ui_dbg_console.cpp  ui_dbg_debugdisplay.cpp  ui_dbg_disassembly.cpp  ui_dbg_history.cpp  ui_dbg_history.h  ui_dbg_history_format.cpp  ui_dbg_memory.cpp  ui_dbg_memory.h  ui_dbg_memory_bitmap.cpp  ui_dbg_memory_hexdump.cpp  ui_dbg_printer.cpp  (+37 more)
src/AltirraSDL/stubs/: console_stubs.cpp  device_stubs.cpp  oshelper_stubs.cpp  uiaccessors_stubs.cpp  win32_stubs.cpp
src/AltirraSDL/tools/: bake_command_icons.py  bake_icon.py  bake_keyboard.py
src/Asuka/h/: utils.h
src/Kasumi/: CMakeLists.txt
src/Kasumi/h/: resample_stages_x64.h
src/Kasumi/source/: resample_stages_x64.cpp  uberblit_resample.cpp
src/VDDisplay/source/: customeffectimpld3d11.cpp  customeffectutilsd3d.cpp  displaydrv3d.cpp
src/compat/: posix_string.h
src/h/at/ataudio/: pokey.h  (+2 more)
src/system/: CMakeLists.txt  system.vcxproj  system.vcxproj.filters
src/system/source/: configdir_sdl3.cpp  cpuaccel.cpp  date.cpp  date_sdl3.cpp  filestream.cpp  filesys.cpp  filewatcher_sdl3.cpp  registry_sdl3.cpp  time_sdl3.cpp  zip.cpp
(+724 files in other folders)
